5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1728_2496.log
== TEST (2019-06-07 11:07:51) 
-- CODE:
num = int(input("digite numero: "))

cont = 0
soma = 0

while(num > -1):
	soma = soma + num
	cont = cont + 1
	num = int(input("digite numero: "))
	
if(cont > 0):
	print(soma + cont)
	
-- ERROR:
File "XXXX", line 11
    while(a != ab)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 16:31:58) 
-- CODE:
num = int(input("digite numero: "))

cont = 0
soma = 0

while(num > -1):
	soma = soma + num
	cont = cont + 1
	num = int(input("digite numero: "))
	
if(cont > 0):
	print(soma + cont)
	
-- ERROR:
File "XXXX", line 11
    while(a != ab)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 16:39:32) 
-- CODE:
num = int(input("digite numero: "))

cont = 0
soma = 0

while(num != -1):
	soma = soma + num
	cont = cont + 1
	num = int(input("digite numero: "))
	
if(cont > 0):
	print(soma)
	
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 16:40:06) 
-- CODE:
num = int(input("digite numero: "))

cont = 0
soma = 0

while(num != -1):
	soma = soma + num
	cont = cont + 1
	num = int(input("digite numero: "))
	
if(cont > 0):
	print(soma)
	
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 16:40:19) 
-- CODE:
num = int(input("digite numero: "))

cont = 0
soma = 0

while(num != -1):
	soma = soma + num
	cont = cont + 1
	num = int(input("digite numero: "))
	
if(cont > 0):
	print(soma)
	
-- EXECUTION TIME:
0.860246
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
